--- a/angular/HttpServiceExample.html
+++ b/angular/HttpServiceExample.html
@@ -11,7 +11,7 @@
 <script>
 var app = angular.module('myApp', []);
 app.controller('customersCtrl', function($scope, $http) {
-    $http.get("test-data.json")
+    $http.get("angular/test-data.json")
     .success(function(response) {$scope.names = response.records;});
 });
 </script>
