--- a/mongo/MongoExample.html
+++ b/mongo/MongoExample.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<div ng-app="myApp" ng-controller="myCtrl">
-{{ firstName + " " + lastName }}
+<div>
+Mongo Example - Check Console for connection ...
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
