--- a/mongo/MongoExample.html
+++ b/mongo/MongoExample.html
@@ -10,7 +10,7 @@ Mongo Example - Check Console for connection ...
 
 <script>
 // Retrieve
-var MongoClient = require('mongodb').MongoClient;
+var MongoClient = require(['mongodb']).MongoClient;
 
 // Connect to the db
 MongoClient.connect("mongodb://user:pass@ds053958.mongolab.com:53958/alteregos", function(err, db) {
