--- a/leaflet/LeafletUSStatesExample.html
+++ b/leaflet/LeafletUSStatesExample.html
@@ -7,7 +7,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="../dist/leaflet.css" />
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
 	<style>
 		#map {
@@ -45,7 +45,7 @@
 <body>
 	<div id="map"></div>
 
-	<script src="../dist/leaflet.js"></script>
+	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
 	<script type="text/javascript" src="us-states.js"></script>
 	<script type="text/javascript">
