--- a/leaflet/LeafletUSStatesExample.html
+++ b/leaflet/LeafletUSStatesExample.html
@@ -47,7 +47,7 @@
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-	<script type="text/javascript" src="us-states.js"></script>
+	<script type="text/javascript" src="http://leafletjs.com/examples/us-states.js"></script>
 	<script type="text/javascript">
 
 		var map = L.map('map').setView([37.8, -96], 4);
