--- a/leaflet/LeafletUKCountiesExample.html
+++ b/leaflet/LeafletUKCountiesExample.html
@@ -47,10 +47,10 @@
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-	<script type="text/javascript" src="http://leafletjs.com/examples/us-states.js"></script>
+	<script type="text/javascript" src="http://code.highcharts.com/mapdata/countries/gb/gb-all.js"></script>
 	<script type="text/javascript">
 
-		var map = L.map('map').setView([37.8, -96], 4);
+		var map = L.map('map').setView([50.8, -51], 4);
 
 		L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
 			maxZoom: 18,
