--- a/leaflet/LeafletUKCountiesExample.html
+++ b/leaflet/LeafletUKCountiesExample.html
@@ -71,9 +71,9 @@
 		};
 
 		info.update = function (props) {
-			this._div.innerHTML = '<h4>US Population Density</h4>' +  (props ?
+			this._div.innerHTML = '<h4>UK Population Density</h4>' +  (props ?
 				'<b>' + props.name + '</b><br />' + props.density + ' people / mi<sup>2</sup>'
-				: 'Hover over a state');
+				: 'Hover over a county');
 		};
 
 		info.addTo(map);
@@ -143,7 +143,7 @@
 			onEachFeature: onEachFeature
 		}).addTo(map);
 
-		map.attributionControl.addAttribution('Population data &copy; <a href="http://census.gov/">US Census Bureau</a>');
+		map.attributionControl.addAttribution('Population data &copy;test>');
 
 
 		var legend = L.control({position: 'bottomright'});
