--- a/leaflet/LeafletUKCountiesExample.html
+++ b/leaflet/LeafletUKCountiesExample.html
@@ -47,7 +47,7 @@
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-	<script type="text/javascript" src="gbCounties2.js"></script>
+	<script type="text/javascript" src="gbCounties.js"></script>
 	<script type="text/javascript">
 
 		var map = L.map('map').setView([51.5, 0.25], 6);
