--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 		map.on('click', onMapClick);
 
 	</script>
-	
+	<br>
 	<ul>
 	  <li><a href="http://martingollogly.js.org/angular/AngularBootstrapExample.html"> Angular Example</a></a></li>
-	  <li><a href="http://martingollogly.js.org/angular/firebase/AngularFirebaseExample.html>Angular firebase Example</a></li>
+	  <li><a href="http://martingollogly.js.org/angular/firebase/AngularFirebaseExample.html">Angular firebase Example</a></li>
 	</ul>
 </body>
 </html>
