--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</script>
 	<br>
 	<ul>
-	  <li><a href="http://martingollogly.js.org/angular/AngularBootstrapExample.html"> Angular Example</a></a></li>
+	  <li><a href="http://martingollogly.js.org/angular/AngularBootstrapExample.html"> Angular Example</a></li>
 	  <li><a href="http://martingollogly.js.org/angular/firebase/AngularFirebaseExample.html">Angular firebase Example</a></li>
 	</ul>
 </body>
