--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 </head>
 <body>
+<h3> Leaflet Example with Icons </h3>
 	<div id="map" style="width: 600px; height: 400px"></div>
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -54,9 +55,10 @@
 
 	</script>
 	<br>
+	<h3> Some Quick Angular Demos </h3>
 	<ul>
 	  <li><a href="http://martingollogly.js.org/angular/AngularBootstrapExample.html"> Angular Example</a></li>
-	  <li><a href="http://martingollogly.js.org/angular/firebase/AngularFirebaseExample.html">Angular firebase Example</a></li>
+	  <li><a href="http://martingollogly.js.org/angular/firebase/AngularFireBaseExample.html">Angular firebase Example</a></li>
 	</ul>
 </body>
 </html>
