--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 		map.on('click', onMapClick);
 
 	</script>
+        <br>
+	<h3> Some Other Leaflest Examples </h3>
+	<ul>
+	  <li><a href="http://martingollogly.js.org/leaflet/LeafletUSCountiesExample.html">US States (From http://leafletjs.org)</a></li>
+	  <li><a href="http://martingollogly.js.org/leaflet/LeafletUKStatesExample.html">UK Counties</a></li>
+	</ul>	
 	<br>
 	<h3> Some Quick Angular Demos </h3>
 	<ul>
