--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	</script>
         <br>
-	<h3> Some Other Leaflest Examples </h3>
+	<h3> Some Other Leaflet Examples </h3>
 	<ul>
 	  <li><a href="http://martingollogly.js.org/leaflet/LeafletUSStatesExample.html">US States (From http://leafletjs.org)</a></li>
 	  <li><a href="http://martingollogly.js.org/leaflet/LeafletUKCountiesExample.html">UK Counties</a></li>
@@ -65,6 +65,10 @@
 	<ul>
 	  <li><a href="http://martingollogly.js.org/angular/AngularBootstrapExample.html"> Angular Example</a></li>
 	  <li><a href="http://martingollogly.js.org/angular/firebase/AngularFireBaseExample.html">Angular firebase Example</a></li>
+	</ul>
+	<h3> Some MapBox Demos </h3>
+	<ul>
+	  <li><a href="http://martingollogly.js.org/mapbox/MapBoxWithWMSLayers.html">MapBox With WMS Layers.html</a></li>
 	</ul>
 </body>
 </html>
