--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 	<br>
 	<h3> Some MapBox Demos </h3>
 	<ul>
-	  <li><a href="http://martingollogly.js.org/mapbox/MapBoxWithWMSLayers.html">MapBox With WMS Layers.html</a></li>
+	  <li><a href="http://martingollogly.js.org/mapbox/MapBoxWithWMSLayers.html">MapBox With WMS Layers</a></li>
+	  <li><a href="http://martingollogly.js.org/mapbox/MoveTooltip.html">MapBox Moving Tool Tip Around</a></li>
 	</ul>
 </body>
 </html>
