--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<h3> Some MapBox Demos </h3>
 	<ul>
 	  <li><a href="http://martingollogly.js.org/mapbox/MapBoxWithWMSLayers.html">MapBox With WMS Layers</a></li>
+	  <li><a href="http://martingollogly.js.org/mapbox/MapBoxWithCartoAndTorque.html">MapBox ship movement with CartoDB and Torque</a></li>
 	  <li><a href="http://martingollogly.js.org/mapbox/MoveTooltip.html">MapBox Moving Tool Tip Around</a></li>
 	</ul>
 </body>
