--- a/index.html
+++ b/index.html
@@ -1,77 +1,63 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Leaflet Quick Start Guide Example</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-	<link rel="stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-</head>
-<body>
-<h3> Leaflet Example with Icons </h3>
-	<div id="map" style="width: 600px; height: 400px"></div>
+<!doctype html>
+<html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Site Name</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="/main.css">
+    <script src="https://code.getmdl.io/1.1.3/material.min.js" defer></script>
+  </head>
+  <body>
+    <div class="mdl-layout mdl-js-layout layout">
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+  <div class="mdl-layout__header-row">
+    <!-- Title -->
+    <span class="mdl-layout-title">Martin Gollogly</span>
+    <!-- Add spacer, to align navigation to the right -->
+    <div class="mdl-layout-spacer"></div>
+    <!-- Desktop Navigation -->
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="/">Link</a>
+      <a class="mdl-navigation__link" href="/">Link</a>
+      <a class="mdl-navigation__link" href="/">Link</a>
+      <a class="mdl-navigation__link" href="/">Link</a>
+    </nav>
+  </div>
+</header>
+<div class="mdl-layout__drawer">
+  <span class="mdl-layout-title">Site Name</span>
+  <!-- Mobile Navigation -->
+  <nav class="mdl-navigation">
+    <a class="mdl-navigation__link" href="/">Link</a>
+    <a class="mdl-navigation__link" href="/">Link</a>
+    <a class="mdl-navigation__link" href="/">Link</a>
+    <a class="mdl-navigation__link" href="/">Link</a>
+  </nav>
+</div>
 
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-	<script>
+      <main class="mdl-layout__content">
+        <div class="content">
+          <h1>Welcome!</h1>
+<p>This page was created by <a href="https://easystatic.com">Easystatic</a> site generator.</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-		var map = L.map('map').setView([51.505, -0.09], 13);
-
-		L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'examples.map-i875mjb7'
-		}).addTo(map);
-
-
-		L.marker([51.5, -0.09]).addTo(map)
-			.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
-
-		L.circle([51.508, -0.11], 500, {
-			color: 'red',
-			fillColor: '#f03',
-			fillOpacity: 0.5
-		}).addTo(map).bindPopup("I am a circle.");
-
-		L.polygon([
-			[51.509, -0.08],
-			[51.503, -0.06],
-			[51.51, -0.047]
-		]).addTo(map).bindPopup("I am a polygon.");
-
-
-		var popup = L.popup();
-
-		function onMapClick(e) {
-			popup
-				.setLatLng(e.latlng)
-				.setContent("You clicked the map at " + e.latlng.toString())
-				.openOn(map);
-		}
-
-		map.on('click', onMapClick);
-
-	</script>
-        <br>
-	<h3> Some Other Leaflet Examples </h3>
-	<ul>
-	  <li><a href="http://martingollogly.js.org/leaflet/LeafletUSStatesExample.html">US States (From http://leafletjs.org)</a></li>
-	  <li><a href="http://martingollogly.js.org/leaflet/LeafletUKCountiesExample.html">UK Counties</a></li>
-	</ul>	
-	<br>
-	<h3> Some Quick Angular Demos </h3>
-	<ul>
-	  <li><a href="http://martingollogly.js.org/angular/AngularBootstrapExample.html"> Angular Example</a></li>
-	  <li><a href="http://martingollogly.js.org/angular/firebase/AngularFireBaseExample.html">Angular firebase Example</a></li>
-	</ul>
-	<br>
-	<h3> Some MapBox Demos </h3>
-	<ul>
-	  <li><a href="http://martingollogly.js.org/mapbox/MapBoxWithWMSLayers.html">MapBox With WMS Layers</a></li>
-	  <li><a href="http://martingollogly.js.org/mapbox/MapBoxWithCartoAndTorque.html">MapBox ship movement with CartoDB and Torque</a></li>
-	  <li><a href="http://martingollogly.js.org/mapbox/MoveTooltip.html">MapBox Moving Tool Tip Around</a></li>
-	</ul>
-</body>
+        </div>
+      </main>
+    </div>
+    <script>
+      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+      ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+  </body>
 </html>
